--- a/LectureNotes/ResearchSkills.tex
+++ b/LectureNotes/ResearchSkills.tex
@@ -1,6 +1,6 @@
 \documentclass{tufte-book}
 
-%\usepackage[utf8]{inputenc}
+\usepackage[latin1]{inputenc} % uft8?
 
 \usepackage{color}
 \usepackage{xcolor}
@@ -58,7 +58,7 @@ tableofcontents}
 
 \section*{Preface}
 
-Word in progress. Please send comments to \href{http://florianhartig.wordpress.com/}{http://florianhartig.wordpress.com/}
+Lecture notes for the MSc course "Research Skills". Work in progress. Please send comments and suggestions to \href{http://florianhartig.wordpress.com/}{http://florianhartig.wordpress.com/}
 
 
 Acknowledgments: Severin Hauenstein for contributions to the chapter on scientific writing
@@ -73,20 +73,18 @@ The Oxford dictionary defines science as
 Science /?s???ns/ [mass noun] - the intellectual and practical activity encompassing the systematic study of the structure and behaviour of the physical and natural world through observation and experiment
 \end{quote}
 
-But clearly, when we speak about science, the history of science, the state of science, we speak about more than that.
+Hence, science is a method to find out how to world works.\footnote{Epistemology, from Greek epist?m? = knowledge and logos = word is the branch of philosophy concerned with what knowledge is, how it can be acquired, and what can be known} In fact, "a method" is an understatement. In the last centuries, the scientific method has been the reason for an unprecedented increase in knowledge, opportunity and well-being. In the western world at least, science is the current dominant answer to what one can know and how to find it out (epistemology). 
 
-Science is a method to find out how to world works 
+But science is also a human endeavor.\footnote{Many famous scientists engaged in personal feuds that, looking back, seem to be fueled by ego more than by scientific evidence. A famous example is the doubtlessly ingenious Isaac Newton. Brian Gottesman notes \href{http://mentalfloss.com/article/24520/6-things-you-should-know-about-isaac-newton}{here}:"Newton was a man of great ego and great temper, and had few close friends. His dispute with German mathematician Gottfried Leibniz over the invention of infintesmial calculus is the stuff of legend, but Newton's less famous academic feuds were both bitter and many. His fellow scientists John Flamsteed, Robert Hooke, and Henry Oldenberg were just a few of those who at times felt the sting of Newton's viciousness. Sir Isaac's most famous quotation may well have been an exercise in sarcastic, spiteful anger. In February 1676 Newton wrote to Hooke "if I have seen further it is by standing on the shoulders of Giants." Often taken as a sign of Newton's great humility, this famed quote was almost certainly intended as an insult to Hooke, who was hunchbacked and may have suffered from a form of dwarfism."} If one says "science", it may be that the reference relates to the history of science, the state of scientific knowledge, or the science as a social institution. Regarding those latter aspects of science, things become less formally defined - if we look at the history of science, we see a complex of individuals that are somewhat unified by a common cause, but at the same time subject to their national and cultural influences as well as by personal vanity, pride or madness. As a result, the history of science, as well as its present state, is complicated by personal preferences, power games and random events, in the same way as political and economic history is.
 
-Science is the Current dominant answer to what one can know and how to find it out (epistemology)
+In the center of science, however, is a set of simple assumptions and ideals, often referred to as the "scientific method". Understanding how this method works will be the focus of the remaining part of this chapter.
 
 
-\section{Induction and Deduction}
+\section{Philosophical foundations of scientific thinking}
 
-\subsection{Induction}
+\subsection{Induction and deduction}
 
 \subsection{Empiricism}
-
-\subsection{Deduction}
 
 \subsection{Rationalism}
 
@@ -139,7 +137,6 @@ Greenberg-Howcitationdistortions-2009
 
 
 
-
 \chapter{From empirical data to scientific conclusions - experimental design and validity}
 
 Assuming you have your question, how can we find an answer to this.
@@ -189,47 +186,46 @@ Kelleher-Tenguidelineseffective-2011
 
 \section{The purpose and the art of writing}
 
-Writing is an essential skill for a professional academic. 
-
- an important part of the professional life of an academic. It is the communication of (original) results and thus a driver of progress through the expansion of the current state of knowledge \citep{Tischler1978}.
-Of course, there are also personal reasons why one may improve scientific writing skills. Selling an argument and getting recognised for your work primarily depends on the quality of your work but certainly also on the way it is being communicated. 
-The career of researchers and professors depend on their ability to communicate their cause in writing. Even if this does not apply to you yet, a well-thought-out master thesis or report may help you convince your project supervisor leading to better marks.  
-Furthermore, writing helps you thinking: Start early to write your thesis/ project. It will help you structure your thoughts and question your logic \citep{Woodford1967}.
-
-Writing has a dual purpose 
-
-
-Advice on writing essays and theses
-
-Preparation ? Know what you want to say. Sounds trivial, but really, ?If you don?t know where you are going,you?ll end up someplace else? (Yogi Berra). Before you pile up words, try to explain a friend in 5 min the point of your theses. If you fail with this, think again about your story.
-
-Start writing early ? Because, while writing, you will find flaws in your logic that you didn?t see before, and you can correct your direction. ?The time to begin writing an article is when you have finished it to your satisfaction. By that time you begin to clearly and logically perceive what it is that you really want to say.? (Mark Twain)
-
-Mindset ? Make your goal, above all, clarity of thought and expression, and impervious logic of your argument. Google and read Woodford, F. (1967) Sounder thinking through clearer writing. Science, 156, 743.
-
-Modesty ? Think of your essay or thesis as a piece of craftsmanship. You are an apprentice and you are asked to make a chair. What is expected of you is a simple piece of work that respects the rules you have been taught, and that is, above all, solid. You are not expected to add fancy ornamentation that might be used by an ingenious master craftsmen, and you are not asked to produce a entire set of furniture that would suffice to fit out a house. You would gain admiration and praise if you could manage to achieve one of the latter, but likely you will fail to even produce the very thing you were asked for while trying ? a simple, solid chair. Bottomline ? stay modest in what you want to achieve, but stay ambitions in how you achieve it!
-
-Style ? Writing is difficult. Good writing is incredibly hard. If you think writing is no problem for you, you probably haven?t even realized the extent of your writing problems. Read
-
-
+Writing is an essential skill for a professional academic. Scientific progress relies on the communication of (original) scientific results\citep{Tischler1978}. If you are not swayed by the greater good - also your personal recognition, your career, or simply the mark for a report or an essay relies on being able to communicate your work in writing. These things are unlikely to change soon - even in the world of technology, writing will likely remain the most important communication channel in science and many professions beyond. 
 
 Now that we established why scientific writing is important to us, we may be interested to know: What is good science writing and how can we improve our skills? 
 
+Writing is a subtle art. As for any art or craft, you will not acquire it by learning the "laws of writing" by heart and following them to the word. To become a skilled writer, you need to understand the art of writing by observation, practice and reflection. Read widely, and think about why some writers appeal to you more. Look critically over your writing, and think about the things that you can improve. This is a process that takes time and requires experience.
 
-To answer these questions recall the goal of scientific writing; "it matters only whether a large majority of the reading audience accurately perceives what the author had in mind" \citep{Gopen1990}. Therefore it is important to understand that the reader does not only read but interpret the written document. Most readers are familiar with the conventions of science writing and expect to find arguments, sections and statements in relatively fix positions. That is to say, if the writer respects these structural standards the readability is greatly improved. 
+Nevertheless, there are some hints that can be given to be more effective in writing, in particular in academic writing. Here are the seven most important ones:
+
+\paragraph{Start writing early} Writing structures your thinking, and you will find flaws in your logic that you didn't see before. "The time to begin writing an article is when you have finished it to your satisfaction. By that time you begin to clearly and logically perceive what it is that you really want to say." (Mark Twain)
+
+\paragraph{Know your audience} Who is going to read what you write? This mostly depends on the journal you choose to publish your work. You need to adjust your text to the knowledge and background of your audience. As \citet{Gopen1990} state "it matters only whether a large majority of the reading audience accurately perceives what the author had in mind".
+
+
+\paragraph{Know what you want to say}. What is the main message you want to tell people with your paper? Sounds trivial, but in my experience it isn't. Remember: Writing a good paper is not about telling everything you know or have done about a topic -- it is about telling a story and selecting the relevant details. Remember, "if you don't know where you are going,you'll end up someplace else" (Yogi Berra). Before spending hours on writing the wrong text, try to explain a friend in 5-10 min the essential points of piece, and note the structure. If you fail with this, think again about your story.
+
+\paragraph{Mindset} Make your goal, above all, clarity of thought and expression, and impervious logic of your argument. Read \citet{Woodford1967}.
+
+\paragraph{Respect conventions} Most readers are familiar with the conventions of science writing and expect to find arguments, sections and statements in relatively fix positions. That is to say, if the writer respects these structural standards the readability is greatly improved. 
 You certainly know the general layout of a scientific article (at least in the (environmental) natural sciences). It is divided in a title, abstract, introduction, materials and methods, results and discussion. Within these structural elements there are further recognizable patterns, which lead to a better understanding of the article's messages \citep{Gopen1990,Tischler1978}.  
 
-Establishing a basis to build upon, these "laws of writing" can be taught. However, to become a skilled writer you need to start reflecting about your writing. This is a process that takes time and requires experience. 
 
-In this short note we provide the scientific writing standards and conventions we consider the most important to start with. We split them into elements of structure and style and finally, we present a commented, made-up research article for which we point out the key elements of science writing.
-
-Before you start writing however, you need to be aware of your audience. Who is going to read what you write? This mostly depends on the journal you choose to publish your work. Bearing this in mind the next step is to list your key messages. What is the main message you want to tell people with your paper? Just remember: Writing a good paper is not about telling everything you know or have done about a topic -- it is about telling a story and selecting the relevant details.
+\paragraph{Modesty} Think of your text or thesis as a piece of craftsmanship. You are an apprentice and you are asked to make a chair. What is expected of you is a simple piece of work that respects the rules you have been taught, and that is, above all, solid. You are not expected to add fancy ornamentation that might be used by an ingenious master craftsmen, and you are not asked to produce a entire set of furniture that would suffice to fit out a house. You would gain admiration and praise if you could manage to achieve one of the latter, but likely you will fail to even produce the very thing you were asked for while trying ? a simple, solid chair. Bottomline ? stay modest in what you want to achieve, but stay ambitions in how you achieve it!
 
 
-\section{Writing style and logic}
+\paragraph{Style} Writing is difficult. Good writing is incredibly hard. If you think writing is no problem for you, you probably haven't even realized the extent of your writing problems. Read
 
 
-\subsection*{Sentence Structure}
+In the rest of the chapter, we will look at two aspects of this hints in more detail: writing style (which covers style as well as clarity), and the structure of a scientific paper. 
+
+
+
+\section{Style}
+
+
+\subsection{Sentence Structure}
+
+\begin{quote}
+The battle for good writing is won sentence by sentence! A good sentence is: short, has the subject and verb together, has an active verb, has the points of emphasis at the beginning and end, and moves the reader along from a familiar launch point at the start to the new information at the end. (Brian McGill, on the blog Dynamic Ecology)
+\end{quote}
+
 
 
 \subsection{Paragraph structure}
@@ -246,12 +242,15 @@ The first sentence provides the topic of the paragraph. The last sentence should
 
 
 
+\subsection{Logic}
 
-    This blog post by Brian McGill. The most important point of this post in my opinion: ?The battle for good writing is won sentence by sentence! A good sentence is: short, has the subject and verb together, has an active verb, has the points of emphasis at the beginning and end, and moves the reader along from a familiar launch point at the start to the new information at the end.?
-    Writing tips by Mark Twain. Especially this one: ?As to the Adjective: when in doubt, strike it out.?
- \citep{Gopen-ScienceOfScientific-1990}
 
-Disclaimer ? Different people / disciplines have different opinions about writing. You can?t ?prove? the correctness of style, so be adviced that my suggestions are no natural laws and can be overruled by you as wells as your supervisor or the editor of whatever journal you submit your work.
+\subsection{Clarity}
+
+Keep it simple. \footnote{Mark Twain is famous for his effective writing. A tip from him: "As to the Adjective: when in doubt, strike it out."}
+
+
+
 
 
 
@@ -397,7 +396,7 @@ this Correlation, as R is dependent on C (XAY, 1968).
 \item Style
 \begin{enumerate}
 	\item Drop redundant words: Any of the following \textbf{words} can be erased: "\textbf{a total of} n subjects", "the simulations were run with the \textbf{exact} same parameter set as before"
-	\item Pompous/ pontificating style: If something can be said in simple words, it should be said in simple words, i.e. if the only purpose of a sentence is to "sound scientific", it should not be said at all. Examples: The data \textbf{featured/comprised} a pixel size of 10 (had). We utilized (use). We used the model in an integrated framework to facilitate a holistic forecast" (predicting from the model). Tip: Read \citet{Woodford1967}.
+	\item Pompous/ pontificating style: If something can be said in simple words, it should be said in simple words, i.e. if the only purpose of a sentence is to "sound scientific", it should not be said at all. Examples: The data \textbf{featured/comprised} a pixel size of 10 (had). We utilized (use).\footnote{Styleguides advice against complicated words such as utilize if there are simpler equivalent alternatives, although others have argued that there is a different between use and utilize - but could you name it? See discussion here \href{http://en.wiktionary.org/wiki/utilise}{here}.} We used the model in an integrated framework to facilitate a holistic forecast" (predicting from the model). Tip: Read \citet{Woodford1967}.
 	\item Topic position/ Stress position not properly occupied: The first part of a sentence should give the context. The last part of the sentence should provide the crucial new information, and should relate to what is further discussed. Tip: Read \citet{Gopen1990}.
 	\item A paragraph structures the text into topical units. Use them! Each paragraph should introduce its topic in the beginning, and ideally lead to some conclusion or summary at the end. 
 	\item Unnecessary adjectives. Mark Twain: "As to the adjective: when in doubt, strike it out." Especially adjectives such as "very", "particularly" are often not necessary. Applies also to larger constructs such as "Evolutionary Game Theory \uline{is an important tool to} investigate(s) ..." -- if you erase the underlined text, the sentence remains fine.
